--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <div id='container'>
     <header>
       <%= link_to root_path, class: "brand" do %>
-        <div class='brand-name'>Elovation</div>
+        <div class='brand-name'>The Clinica League</div>
         <div class='brand-label'>Home</div>
       <% end %>
     </header>
