--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,7 +16,7 @@
 
 html
   font-size: 62.5%
-  font-family: 'Source Sans Pro', "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-family: 'Montserrat', "Helvetica Neue", Helvetica, Arial, sans-serif
 
 body
   background-color: #f9f9f9
