--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,7 +16,7 @@
 
 html
   font-size: 62.5%
-  font-family: 'Montserrat', "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-family: 'Montserrat', sans-serif
 
 body
   background-color: #f9f9f9
@@ -28,7 +28,7 @@ h1, h2, h3, h4, #games-list
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
 h1, h2, h3
-  font-weight: 300
+  font-weight: 700
   line-height: 1.45em
 h2, h3, h4
   margin: 20px 0
