--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -36,7 +36,7 @@ h1
   color: #666
   margin: 0 0 10px
   font-size: 6.2rem
-
+  font-family: 'Luckiest Guy', cursive
   line-height: 1.2em
 h2
   color: #444
