--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,7 +33,7 @@ h1, h2, h3
 h2, h3, h4
   margin: 20px 0
 h1
-  color: #666
+  color: #c2185b
   margin: 0 0 10px
   font-size: 6.2rem
   font-family: 'Luckiest Guy', cursive
@@ -41,6 +41,7 @@ h1
 h2
   color: #444
   font-size: 3.6rem
+  font-family: 'Luckiest Guy', cursive
 h3
   font-size: 2.4rem
 h4
@@ -353,8 +354,7 @@ select
     font-size: 1.8rem
 
   header a.brand
-    left: 50%
-    margin-left: -30px
+    left: 25%
   #games-list .game-list-item
     display: block
     width: 100%
