--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -115,6 +115,7 @@ header
   .brand-name
     color: #fff
     font-size: 2rem
+    font-weight: 700
     padding: 10px 0 20px
   .brand-label
     text-align: center
