--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -264,6 +264,19 @@ time
     vertical-align: middle
     margin: -2px 6px -2px 10px
 
+.chosen-container, .chosen-choices, .chosen-container .search-field input,
+.chosen-default, .chosen-default span
+  display: inline-block
+  vertical-align: bottom
+  min-height: 32px
+.chosen-container, .chzn-choices
+  width: 300px
+.chosen-container .search-field
+  border-bottom: none
+.chosen-default span
+  padding: 5px 0
+.chosen-container.chosen-container-single .chosen-single div b
+  background-position: 0 7px
 
 
 
