--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -266,6 +266,7 @@ time
 
 .chosen-container, .chosen-choices, .chosen-container .search-field input,
 .chosen-default, .chosen-default span
+  width: 25% important!
   display: inline-block
   vertical-align: bottom
   min-height: 32px
