--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -2,7 +2,7 @@
 
 	<div class='span8'>
 		<h1>The Clinica League</h1>
-		<%= link_to "New Game", new_game_path, class: "btn btn-primary" %>
+		<!--<%= link_to "New Game", new_game_path, class: "btn btn-primary" %>-->
 
 		<ul id='games-list'>
 		<% @games.each do |game| %>
