--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,11 +1,11 @@
 <h1>Games / <%= @game.name %></h1>
 
-<section class="action-buttons">
+<!--<section class="action-buttons">
   <%= link_to 'Edit', edit_game_path(@game), class: "btn" %>
   <% if @game.results.empty? %>
     <%= link_to "Delete", game_path(@game), method: :delete, confirm: "Are you sure?", class: "btn btn-danger" %>
   <% end %>
-</section>
+</section>-->
 
 <div class="row-fluid">
   <div class="span8">
