--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -67,4 +67,14 @@
 		</div>
 	</div>
 
+  <div class="span4">
+    <h2>Recent Results</h2>
+       <% if @game.recent_results.any? %>
+      <%= render partial: 'shared/results', object: @game.recent_results, locals: {show_game: false} %>
+    <% else %>
+      <span>No results, play some games!</span>
+    <% end %>
+
+  </div>
+
 </div>
